Fix for bug 72805. r=darin, sr=dougt, a=asa. No longer displaying the "Resolving..." message for IP addresses (and additionally for cached/resolved cases). This should now reduce the number of "Resolving hostname" events (and hence flashing status messages) on page loads as well.